fix text alignement

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,11 +53,11 @@ a {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -45%);
 }
 
 .menu-item {
-    margin-bottom: 0.5em;
+    margin-bottom: 0.3em;
     padding: 0 0.5em;
     border: 2px solid rgba(255, 255, 255, 0);
 }
@@ -234,5 +234,5 @@ a {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -100%);
+    transform: translate(-50%, -60%);
 }
